<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.0.RELEASE</version>
	</parent>
	<artifactId>glygen-array-app</artifactId>
	<description>Glygen Array backend application</description>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	
	<repositories>
		<repository>
			<id>nexus</id>
			<url>https://glygen.ccrc.uga.edu/repository/content/repositories/thirdparty/</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- Compile -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jdbc</artifactId>
		</dependency>
		<dependency>
		   	<groupId>org.postgresql</groupId>
  			<artifactId>postgresql</artifactId>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security.oauth.boot</groupId>
			<artifactId>spring-security-oauth2-autoconfigure</artifactId>
			<version>2.1.1.RELEASE</version>
       </dependency>
       <dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-oauth2-client</artifactId>
		</dependency>
		<!-- Logback dependencies -->
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-impl</artifactId>
		    <version>2.3.0</version>
		</dependency>
		<!-- RDF4J -->
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-runtime</artifactId>
            <version>2.5.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-repository-sail</artifactId>
            <version>2.5.2</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-sail-nativerdf</artifactId>
            <version>2.5.2</version>
            <scope>provided</scope>
        </dependency>
		<dependency>
		  <groupId>virtuoso</groupId>
		  <artifactId>jdbc4</artifactId>
		  <version>2.0</version>
		</dependency>
		<dependency>
		  <groupId>virtuoso</groupId>
		  <artifactId>rdf4j</artifactId>
		  <version>2.0</version>
		</dependency>
		<!--  swagger -->
		<dependency>
    		<groupId>io.springfox</groupId>
    		<artifactId>springfox-swagger2</artifactId>
   			<version>2.7.0</version>
		</dependency>
		<dependency>
		    <groupId>io.springfox</groupId>
		    <artifactId>springfox-swagger-ui</artifactId>
		    <version>2.7.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt</artifactId>
		    <version>0.9.0</version>
		</dependency>
		<dependency>
		    <groupId>com.github.ulisesbocchio</groupId>
		    <artifactId>jasypt-spring-boot-starter</artifactId>
		    <version>2.0.0</version>
		</dependency>
		<!-- GRITS-GlycanArray -->
		<dependency>
		  <groupId>grits</groupId>
		  <artifactId>glycanarray</artifactId>
		  <version>1.29</version>
		</dependency>
		<dependency>
		    <groupId>grits</groupId>
		    <artifactId>filter-om</artifactId>
		    <version>1.19</version>
		</dependency>
		<!--  
		<dependency>
			  <groupId>eurocarb</groupId>
			  <artifactId>eurocarb-glycanbuilder</artifactId>
			  <version>1.0rc</version>
		</dependency> 
		-->
		<dependency>
			<groupId>org.eurocarbdb.glycanbuilder</groupId>
			<artifactId>glycanbuilder2</artifactId>
			<version>1.12.0</version>
			<exclusions>
		        <exclusion>
		            <groupId>log4j</groupId>
		            <artifactId>log4j</artifactId>
		        </exclusion>
		    </exclusions>
		</dependency>
		<!--  dependency>
			  <groupId>eurocarb</groupId>
			  <artifactId>eurocarb-glycoworkbench</artifactId>
			  <version>1.0rc</version>
		</dependency -->
		<!-- 
		<dependency>
		  <groupId>eurocarb</groupId>
		  <artifactId>eurocarb-molecularframework</artifactId>
		  <version>1.0rc</version>
		</dependency>  -->
		<dependency>
		  <groupId>resourcesdb</groupId>
		  <artifactId>resourcesdb_interfaces</artifactId>
		  <version>1</version>
		</dependency>
		<!--  GlycoInfo -->
		<dependency>
		  <groupId>glycoinfo</groupId>
		  <artifactId>converter</artifactId>
		  <version>2.6.0</version>
		</dependency>
		<dependency>
		  <groupId>glycoinfo</groupId>
		  <artifactId>molecular</artifactId>
		  <version>0.1.37</version>
		</dependency>
		<dependency>
		  <groupId>glycoinfo</groupId>
		  <artifactId>wurcs</artifactId>
		  <version>1.0.1</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jdom/jdom -->
		<dependency>
		    <groupId>org.jdom</groupId>
		    <artifactId>jdom</artifactId>
		    <version>1.1.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core/2.16.0 -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.16.0</version>
		</dependency>
	    <dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.16.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-1.2-api -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-1.2-api</artifactId>
		    <version>2.17.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.google.apis/google-api-services-gmail -->
		<dependency>
		    <groupId>com.google.apis</groupId>
		    <artifactId>google-api-services-gmail</artifactId>
		    <version>v1-rev98-1.25.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
		    <groupId>org.apache.poi</groupId>
		    <artifactId>poi-ooxml</artifactId>
		    <version>3.9</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-collections4</artifactId>
		    <version>4.4</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.htmlunit</groupId>
			<artifactId>htmlunit</artifactId>
			<version>2.19</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
			        <folders>
			            <folder>${project.build.directory}/../data</folder>
			        </folders>
			    </configuration>
			</plugin>

		</plugins>
	</build>
	<name>Glygen Array</name>
</project>
